--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/react-dom": "^18.2.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "eslint": "8.22.0"
+
   },
   "scripts": {
     "start": "react-scripts start",
